chore: desktop improvements